@@ -1,3 +1,4 @@
+#include                <stdio.h>
 #include                "tap.h"
 #include                "libFireBird.h"
 
@@ -10,7 +11,7 @@
 
 TAP_ID                  (0x8E0Affff);
 TAP_PROGRAM_NAME        (PROGRAM_NAME" "VERSION);
-TAP_AUTHOR_NAME         ("FireBird");
+TAP_AUTHOR_NAME         ("FireBird & ibbi");
 TAP_DESCRIPTION         ("TMSOSDMenu Demo");
 TAP_ETCINFO             (__DATE__);
 
@@ -19,6 +20,7 @@ typedef enum
 {
   ST_Init,
   ST_Idle,
+  ST_SelectionDialog,
   ST_YesNoDialog,
   ST_WaitInfoBox,
   ST_Exit
@@ -62,6 +64,7 @@ dword TAP_EventHandler(word event, dword param1, dword param2)
       OSDMenuButtonAdd(1, BI_Yellow, NULL, "Small");
 
       OSDMenuButtonAdd(2, BI_Blue,  NULL, "Change Cursor");
+      OSDMenuButtonAdd(2, BI_White,  NULL, "Show List Box");
 
       OSDMenuUpdate(FALSE);
 
@@ -76,15 +79,19 @@ dword TAP_EventHandler(word event, dword param1, dword param2)
       {
         if(param1 == RKEY_Exit)
         {
-          OSDMenuMessageBoxInitialize(PROGRAM_NAME, "You you really want to stop?\nAre you serious?");
-          OSDMenuMessageBoxButtonAdd("Yes");
-          OSDMenuMessageBoxButtonAdd("No");
-          OSDMenuMessageBoxButtonAdd("Don't know");
+          if (OSDMenuListBoxIsVisible()) OSDMenuListBoxDestroy();
+          else
+          {
+            OSDMenuMessageBoxInitialize(PROGRAM_NAME, "You you really want to stop?\nAre you serious?");
+            OSDMenuMessageBoxButtonAdd("Yes");
+            OSDMenuMessageBoxButtonAdd("No");
+            OSDMenuMessageBoxButtonAdd("Don't know");
 
-          //0 = left most button, which is the default, so the next statement is not necessary
-          OSDMenuMessageBoxButtonSelect(0);
-          OSDMenuMessageBoxShow();
-          State = ST_YesNoDialog;
+            //0 = left most button, which is the default, so the next statement is not necessary
+            OSDMenuMessageBoxButtonSelect(0);
+            OSDMenuMessageBoxShow();
+            State = ST_YesNoDialog;
+          }
         }
         else if (param1 == RKEY_Red)
         {
@@ -107,9 +114,56 @@ dword TAP_EventHandler(word event, dword param1, dword param2)
           OSDMenuSetCursor(cursor);
           OSDMenuUpdate(FALSE);
         }
+        else if (param1 == RKEY_White)
+        {
+          OSDMenuListBoxInitialize(FALSE, FALSE, FALSE, TRUE, "List Box", 150, 250, FALSE);
+          OSDMenuItemAdd("1st Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("2nd Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("3rd Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("4th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("5th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("6th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("7th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("8th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("9th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("10th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("11th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("12th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("13th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("14th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("15th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("16th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("17th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("18th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("19th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuItemAdd("20th Name", NULL, NULL, NULL, TRUE, FALSE, 0);
+          OSDMenuButtonAdd(1, BI_Ok, NULL, "Select");
+          OSDMenuButtonAdd(2, BI_Exit, NULL, "Exit");
+          OSDMenuSetLineHeight(LH_Small);
+          OSDMenuUpdate(FALSE);
+        }
+        else if ((param1 == RKEY_Ok) && OSDMenuListBoxIsVisible())
+        {
+          char message[80];
+
+          snprintf(message, sizeof(message), "You've selected '%s'.", OSDMenuItemGetCurrentName());
+          message[sizeof(message) - 1] = 0;
+
+          OSDMenuMessageBoxInitialize(PROGRAM_NAME, message);
+          OSDMenuMessageBoxButtonAdd("That's true");
+          OSDMenuMessageBoxShow();
+
+          State = ST_SelectionDialog;
+        }
         param1 = 0;
       }
 
+      break;
+    }
+
+    case ST_SelectionDialog:
+    {
+      if (!OSDMenuMessageBoxIsVisible()) State = ST_Idle;
       break;
     }
 
